welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    for (i<- 1 to 25){
      if (getCouleurSol){
        avance;
      }else {gauche;}
    }
  if (estSurBiscuit){
    return true
  }
}